develop unit tests for apis /files/uploads (POST) and /animals (GET), modify the POST method of api /files/uploads
